--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://enisshallci:SQGfm9KtLDbOV48k@cluster0.ljpvoaw.mongodb.net/
-Sistemet_E_Shperndara_Database?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://enisshallci:SQGfm9KtLDbOV48k@cluster0.ljpvoaw.mongodb.net/sisteme_shperndara_database?retryWrites=true&w=majority
+
