--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
+    "formik": "^2.2.9",
     "mongoose": "^7.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
