--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-notifications": "^1.7.4",
     "react-toastify": "^9.1.3",
     "slugify": "^1.6.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "yup": "^1.2.0"
   }
 }
